--- a/WolvenKit/Views/SettingsPages/SubPages/General/AccountSubSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/SubPages/General/AccountSubSettingsView.xaml
@@ -5,38 +5,119 @@
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
 
     <Grid hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}">
-        <Grid VerticalAlignment="Top" HorizontalAlignment="Left">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="0">
+            <hc:ScrollViewer>
+                <StackPanel>
 
-            <StackPanel>
 
 
-                <Border BorderThickness="4,0,0,2" Margin="15,15,32,10" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
-                    <Grid>
-                        <TextBlock Text="WolvenKit Profile" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBox Margin="250,0,0,0" Width="250" Text=""/>
+                    <!--Wkit Header-->
+                    <Border BorderThickness="4,0,0,6" Margin="15,15,32,0" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
+                        <Grid>
+                            <TextBlock Text="WolvenKit" FontSize="16" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                        </Grid>
+                    </Border>
+
+                    <!--WolvenKit Profile-->
+                    <Border BorderThickness="4,0,0,2" Margin="15,15,32,10" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
+
+                        <StackPanel>
+                            <Grid Margin="5">
+                                <TextBlock Text="WolvenKit Profile" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <hc:Tag HorizontalAlignment="Right"  ShowCloseButton="False" Content="UserName">
+                                    <hc:Tag.Header>
+                                        <Image Source="{DynamicResource Fluent.Ribbon.Images.DefaultPlaceholder}" />
+                                    </hc:Tag.Header>
+                                </hc:Tag>
+                            </Grid>
+                            <Grid Margin="5">
+                                <TextBlock Text="Email" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <hc:TextBox IsEnabled="False" HorizontalAlignment="Right" Width="250"/>
+                            </Grid>
+                            <Grid Margin="5">
+                                <TextBlock Text="Donate Link" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <hc:TextBox  IsEnabled="False" HorizontalAlignment="Right" Width="250"/>
+                            </Grid>
+                            <Grid Margin="5">
+                                <TextBlock Text="Default Description" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <RichTextBox IsEnabled="False" HorizontalAlignment="Right" Width="250" Height="150"/>
+                            </Grid>
                         </StackPanel>
-                    </Grid>
+                
+                    </Border>
 
 
-                </Border>
+                    <!--Nexus Header-->
+                    <Border BorderThickness="4,0,0,6" Margin="15,50,32,0" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
+                        <Grid>
+                            <TextBlock Text="Nexus" FontSize="16" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                        </Grid>
+                    </Border>
 
-                <Border BorderThickness="4,0,0,2" Margin="15,5,32,10" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
-                    <Grid>
-                        <TextBlock Text="Nexus Account" VerticalAlignment="Center" Margin="0,0,50,0"/>
-                        <StackPanel Orientation="Horizontal">
-                            <ComboBox Margin="250,0,0,0" VerticalAlignment="Center" Width="250" Text=""/>
+
+                    <!--Nexus Account-->
+                    <Border BorderThickness="4,0,0,2" Margin="15,15,32,10" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
+                        <StackPanel>
+                            <Grid Margin="5">
+                                <TextBlock Text="Nexus Account" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <hc:Tag HorizontalAlignment="Right"  ShowCloseButton="False" Content="UserName">
+                                    <hc:Tag.Header>
+                                        <Image Source="{DynamicResource Fluent.Ribbon.Images.DefaultPlaceholder}" />
+                                    </hc:Tag.Header>
+                                </hc:Tag>
+                            </Grid>
+                            <Grid Margin="5">
+                                <TextBlock Text="UserID" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <hc:TextBox IsEnabled="False"  HorizontalAlignment="Right" Width="250"/>
+                            </Grid>
+                            <Grid Margin="5">
+                                <TextBlock Text="Email" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                                <hc:TextBox IsEnabled="False" HorizontalAlignment="Right" Width="250"/>
+                            </Grid>
+
+                        </StackPanel>
+                      
+                    </Border>
+
+
+                    
                  
-                        </StackPanel>
-                    </Grid>
-
-                </Border>
 
 
-            </StackPanel>
 
+
+
+                </StackPanel>
+            </hc:ScrollViewer>
         </Grid>
 
-    </Grid>
+        <Grid Grid.Column="1">
+            <hc:ScrollViewer>
+                <StackPanel>
 
+
+                    <!--Display Header-->
+                    <Border BorderThickness="4,0,0,6" Margin="15,15,32,0" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
+                        <Grid>
+                            <TextBlock Text="Personalize" FontSize="16" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                        </Grid>
+                    </Border>
+
+                    <!--Preferred Application Account-->
+                    <Border BorderThickness="4,0,0,2" Margin="15,15,32,10" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"  Style="{StaticResource BorderTipPrimary}">
+                        <Grid>
+                            <TextBlock Text="Preferred Application Account" VerticalAlignment="Center" Margin="0,0,50,0"/>
+                            <hc:ComboBox HorizontalAlignment="Right" Width="250"></hc:ComboBox>
+                        </Grid>
+                    </Border>
+
+
+                </StackPanel>
+            </hc:ScrollViewer>
+        </Grid>
+    </Grid>
 </catel:UserControl>
