--- a/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/Views/Wizards/WizardPages/ProjectWizard/FinalizeSetupView.xaml
@@ -26,18 +26,18 @@
                             </Grid>
                             <Grid Margin="5,32,0,0" >
 
-                                <TextBlock Text="Project Name" VerticalAlignment="Center">        </TextBlock>
+                                <TextBlock Text="{Binding ProjectName}" VerticalAlignment="Center">        </TextBlock>
                                 <TextBox  Margin="100,0,0,0" Text="Project Name" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
 
                             <Grid Margin="5,32,0,0" >
 
-                                <TextBlock Text="Project Type" VerticalAlignment="Center"></TextBlock>
+                                <TextBlock Text="{Binding ProjectType}" VerticalAlignment="Center"></TextBlock>
                                 <TextBox   Margin="100,0,0,0" Text="Project Type" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
                             <Grid Margin="5,32,0,0" >
 
-                                <TextBlock Text="Project Path" VerticalAlignment="Center"></TextBlock>
+                                <TextBlock Text="{Binding ProjectPath}" VerticalAlignment="Center"></TextBlock>
                                 <TextBox   Margin="100,0,0,0" Text="Project Path" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></TextBox>
                             </Grid>
 
